--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,9 @@
      </aside>
      <div class="col-md-8">
        <h3>Micropost Feed</h3>
+       <%== pagy_bootstrap_nav(@pagy) %>
        <%= render 'shared/feed' %>
+       <%== pagy_bootstrap_nav(@pagy) %>
      </div>
    </div>
 <% else %>
