--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,9 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
-
-<%= will_paginate %>
+<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
 
 <ul class="users">
   <%= render @users %>
 </ul>
 
-<%= will_paginate %>
+<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
