--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,12 +13,13 @@
    </aside>
    <div class="col-md-8">
      <%= render 'follow_form' if logged_in? %>
-     <% if @user.microposts.any? %>
+     <% if @microposts.any? %>
        <h3>Microposts (<%= @user.microposts.count %>)</h3>
+       <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
        <ol class="microposts">
          <%= render @microposts %>
        </ol>
-       <%= will_paginate @microposts %>
+       <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
      <% end %>
    </div>
 </div>
