--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -20,11 +20,12 @@
    </aside>
    <div class="col-md-8">
      <h3><%= @title %></h3>
+     <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
      <% if @users.any? %>
        <ul class="users follow">
          <%= render @users %>
        </ul>
-       <%= will_paginate %>
+       <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
      <% end %>
    </div>
 </div>
