--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,36 +1,38 @@
 <% if logged_in? %>
-   <div class="row">
-     <aside class="col-md-4">
-       <section class="user_info">
-         <%= render 'shared/user_info' %>
-       </section>
-       <section class="stats">
-         <%= render 'shared/stats' %>
-       </section>
-       <section class="micropost_form">
-         <%= render 'shared/micropost_form' %>
-       </section>
-     </aside>
-     <div class="col-md-8">
-       <h3>Micropost Feed</h3>
-       <%== pagy_bootstrap_nav(@pagy) %>
-       <%= render 'shared/feed' %>
-       <%== pagy_bootstrap_nav(@pagy) %>
-     </div>
-   </div>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="stats">
+        <%= render 'shared/stats' %>
+      </section>
+      <section class="micropost_form">
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3>Micropost Feed</h3>
+      <% if @feed_items.any? %>
+        <%= pagy_bootstrap_nav(@pagy) %>
+        <ol class="microposts">
+          <%= render @feed_items %>
+        </ol>
+        <%= pagy_bootstrap_nav(@pagy) %>
+      <% else %>
+        <p>No microposts to display.</p>
+      <% end %>
+    </div>
+  </div>
 <% else %>
   <div class="center jumbotron">
     <h1>Welcome to the Sample App</h1>
-
     <h2>
       This is the home page for the
       <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
       sample application.
     </h2>
-
-    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+    <%= link_to "Sign up now!", new_user_registration_path, class: "btn btn-lg btn-primary" %>
   </div>
-
-  <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
-                        "https://rubyonrails.org/" %>
+  <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"), "https://rubyonrails.org/" %>
 <% end %>
